--- a/packages/react-app/public/index.html
+++ b/packages/react-app/public/index.html
@@ -7,14 +7,14 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta property="og:title" content="Anchor Certificates">
-    <meta property="og:description" content="NFT Memorabilia from Anchor City">
+    <meta property="og:title" content="Paintings of Forgotten Souls">
+    <meta property="og:description" content="NFT Memorabilia from Memories of Atlas">
     <meta property="og:image" content="https://tlatcnfts.untitledfrontier.studio/static/media/ac.21510b13.png">
-    <meta property="og:url" content="https://tlatcnfts.untitledfrontier.studio">
+    <meta property="og:url" content="https://souls.untitledfrontier.studio">
     <meta name="theme-color" content="#000000" />
 
-    <meta name="twitter:title" content="Anchor Certificates">
-    <meta name="twitter:description" content="NFT Memorabilia from Anchor City">
+    <meta name="twitter:title" content="Paintings of Forgotten Souls">
+    <meta name="twitter:description" content="NFT Memorabilia from Memories of Atlas">
     <meta name="twitter:image" content="https://tlatcnfts.untitledfrontier.studio/static/media/ac.21510b13.png">
     <meta name="twitter:card" content="summary_large_image">
     <!--
@@ -30,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Anchor Certificates</title>
+    <title>Paintings of Forgotten Souls</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
