add in static for public meta

--- a/packages/react-app/public/index.html
+++ b/packages/react-app/public/index.html
@@ -9,13 +9,13 @@
     />
     <meta property="og:title" content="Paintings of Forgotten Souls">
     <meta property="og:description" content="NFT Memorabilia from Memories of Atlas">
-    <meta property="og:image" content="https://tlatcnfts.untitledfrontier.studio/static/media/ac.21510b13.png">
+    <meta property="og:image" content="http://souls.untitledfrontier.studio/static/media/moa.1bae466c.png">
     <meta property="og:url" content="https://souls.untitledfrontier.studio">
     <meta name="theme-color" content="#000000" />
 
     <meta name="twitter:title" content="Paintings of Forgotten Souls">
     <meta name="twitter:description" content="NFT Memorabilia from Memories of Atlas">
-    <meta name="twitter:image" content="https://tlatcnfts.untitledfrontier.studio/static/media/ac.21510b13.png">
+    <meta name="twitter:image" content="http://souls.untitledfrontier.studio/static/media/moa.1bae466c.png">
     <meta name="twitter:card" content="summary_large_image">
     <!--
       manifest.json provides metadata used when your web app is added to the
